--- a/pages/p8/950260.md
+++ b/pages/p8/950260.md
@@ -1,4 +1,4 @@
-### 北京维权残疾人举报黑恶势力被安罪名 狱中常遭殴打(组图)
+### 阻碍成功的12条想法(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,14 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="北京维权人士葛志慧“被寻衅滋事罪案”将于8月31日在丰台区法院开庭审理。" src="https://img3.secretchina.com/pic/2020/8-27/p2763382a817645858-ss.jpg"/>
+ <p dir="ltr" style="text-align:center">
+  <img alt="成功 勇气 信心 挫折" src="https://img3.secretchina.com/pic/2020/10-25/p2803362a999468783-ss.jpg"/>
   <br>
-   北京维权人士葛志慧“被寻衅滋事罪案”将于8月31日在丰台区法院开庭审理。（图片来源：维权网）
+   想要
+   <strong>
+    成功
+   </strong>
+   ，就先从告别这12条想法开始。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,235 +25,305 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
-
-#### [ 🔥  U-2是引中共開火的餌？習近平對美軍“準備好了”沒理解；蓬佩奧發暗示，或實力回應大批判](http://141.164.51.119:10000/videos/news/wenzhao01.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
- <p>
-  【看中国2020年8月27讯】（看中国记者卢乙欣综合报导）北京
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/维权" target="_blank">
-    维权
-   </span>
-  </strong>
-  人士、被非法
-  <strong>
-   强拆
-  </strong>
-  受害人
-  <strong>
-   葛志慧
-  </strong>
-  因欲实名举报黑恶势力“被
-  <strong>
-   寻衅滋事
-  </strong>
-  罪案”将于8月31日在丰台区法院开庭审理，但现在却传出葛志慧在狱中常遭到牢头狱霸欺凌、殴打。
+ <p dir="ltr">
+  我们的想法塑造了我们的人生，我们所采取的每一个行动，皆是根据自我的想法，因此，若无法先改变想法，我们的人生就不会有任何改变。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
- <p>
-  维权网资讯中心8月26日报道，北京维权人士、残疾人士
-  <span href="https://www.secretchina.com/news/gb/tag/葛志慧" target="_blank">
-   葛志慧
+ <p dir="ltr">
+  以下是12条阻碍人们迈向
+  <span href="https://www.secretchina.com/news/gb/tag/成功" target="_blank">
+   成功
   </span>
-  “被寻衅滋事罪”一案，将于8月31日上午在丰台区法院开庭审理，担任葛志慧的代理律师马纲权曾经于5月27日会见葛志慧，当时葛志慧向律师表示，身体基本可以，但羁押环境不妙，被指使行事的牢头狱霸时不时对其无故进行殴打，因自己行动不便故经常遭受欺凌。
+  的有害想法:
  </p>
- <p>
-  葛志慧是北京市丰台区岳各庄的一名残疾人，她在2019年6月20日与同区石榴庄东街195号的被
-  <span href="https://www.secretchina.com/news/gb/tag/强拆" target="_blank">
-   强拆
-  </span>
-  人士李美青，前往中央扫黑除恶督导组驻地反映政府采取黑社会化强拆一事，结果却在督导组驻地的门口，被丰台区副区长带队的维稳人员阻截，导致求见扫黑除恶督导组未果。事隔没多久，葛志慧竟然在7月初遭到刑事拘留。罪名为寻衅滋事。葛志慧后来被关押在丰台看守所中，也陆续遭到批捕、起诉，现今已羁押超过1年了，且将于2020年8月31日开庭。
- </p>
- <p>
+ <p dir="ltr">
   <strong>
-   <span href="https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%9C%8B%E7%B6%AD%E6%AC%8A%E9%81%8B%E5%8B%95" target="_blank">
-    维权
-   </span>
-  </strong>
-  网称，将持续关注北京维权人士葛志慧的境况。
- </p>
- <p style="text-align: center;">
-  <img alt="北京维权人士、被非法强拆受害人葛志慧，日前因为要实名举报黑恶势力而被“寻衅滋事罪”。" src="https://img3.secretchina.com/pic/2020/8-27/p2763381a910392445-ss.jpg"/>
-  <br>
-   北京维权人士、被非法强拆受害人葛志慧，日前因为要实名举报黑恶势力而被“寻衅滋事罪”。（图片来源：维权网）
-  </br>
- </p>
- <p>
-  <strong>
-   附《实名举报丰台区政府架空和欺骗国家主席
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
-   </span>
-   》一文
+   1、喜欢跟别人比较
   </strong>
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  举报人：葛志慧，女，53岁，残疾人，残疾证号13062119660708662343B。联系电话：17810287826。暂住北京丰台区魏家村南20号院1号楼门2门1305室。
+ <p dir="ltr">
+  永远都会有比你更优秀的人，一旦你陷入了比较的迷思里，你永远不会得胜，因为一山永远比一山高。人们最大的敌人通常是自己和时间，克服不了自己的坏习惯与态度，却又浪费了太多时间，没有好好努力。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2019年6月20日，举报人响应中央扫黑除恶号召，费了九牛二虎之力，终于找到中央扫黑除恶督导组入驻的地方，距离举报人（葛志慧）家仅有一站地，具体地址在北京丰台区西四环大成路九号酒店。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当举报人和北京市丰台区石榴庄东街195号的被强拆人李美青，到达中央中央扫黑除恶督导组驻地时，发现驻地的酒店外面左右两端和马路对面，布满了便衣员警以及戴红袖标游击队等。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  举报人和李美青同是丰台区的被违法抢劫强拆的受害者，我们都是到中央巡视组举报黑恶势力猖獗欺压百姓，农民土地被强征，村里财产被霸占，到现在都很多年了未给经济补偿和房屋安置。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  举报人和李美青刚走到中央扫黑除恶督导组办公地点的门口，就被戴红袖标一位游击队人员认出来了，汇报给青塔派出所与丰台公安分局，还有冒充员警的人，没有任何手续拦截我们，立即将我们各自控制抓上警车，当时，还有丰台区副区长等区政府领导在现场，请问如果要是真正的中央扫黑除恶督导组，真正的坚决要扫黑除恶，打掉保护伞，丰台政府为何出动员警公然拦截举报人？街道、社区铺天盖地拉起扫黑除恶的横幅，却又安排人拦截举报人，到底是中央督导组躲猫猫玩儿还是丰台区政府怕我们老百姓举报？
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  举报人认为，公然拦截举报人的目的就是上瞒下欺，架空和欺骗中央，架空和欺骗习近平主席，请问丰台区政府官员你们是不是反对习近平依法治国？是不是反党反中央？请国家检察委员会督促丰台区政府回应举报人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  此致：国家检察委员会
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  举报人：葛志慧
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2019年6月22日
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+ <p dir="ltr">
   <strong>
-   中国公民运动网呼吁：停止酷刑迫害 还所有良心犯自由
+   2、不相信其他人
+  </strong>
+ </p>
+ <p dir="ltr">
+  有些人不相信其他人，更甚者，不相信自己。不相信自己会成功，不相信自己有足够的能力，不相信自己可以达成目标……正是这些不相信，阻碍了自己的成功。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   3、太过在意别人的想法
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  许多人都常犯这个错误，那就是太担心别人对自己的看法，一旦你陷入了这个陷阱里，你就会活在别人的世界里，而不是自己想要过的世界。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  太过在意别人的想法，通常会阻碍我们做出正确的事情，它让我们裹足不前，却又无法好好做自己。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   4、没有克服问题的
+   <span href="https://www.secretchina.com/news/gb/tag/勇气" target="_blank">
+    勇气
+   </span>
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  问题之所以无法克服，通常来自于自己的不足，能力不足、经验不足，所以不是问题大，而是我们还不够强大，还不够强大到足以克服问题。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   5、以为自己可以掌控一切
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  许多人有个坏毛病，那就是想掌控周遭的一切，但实情是，很多事情我们无法掌控，我们唯一能好好掌控的，就是自己的想法与行动。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   6、没有足够的
+   <span href="https://www.secretchina.com/news/gb/tag/信心" target="_blank">
+    信心
+   </span>
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  裹足不前，不是因为事情难以做到，我们才失去信心；而是因为我们失去信心，有些事情才显得难以做到。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  有些事情要成功，你必须先相信自己，当你相信了，才会想办法达成。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   7、太多负面想法
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  当你的想法都是负面想法时，你的正向力就会受到影响。我们应该多往好的一面看，正向态度是一种选择，而要成功则有赖于我们的想法。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   8、对过去耿耿于怀
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  有种东西你绝对无法改变，那就是过去，因此，拘泥于过去一点用也没有，我们唯一能把握住的只有现在。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  无论你犯了什么错、有过什么样的失败，都已无法改变，我们唯一能创造改变的时刻，就是此刻。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   9、被
+   <span href="https://www.secretchina.com/news/gb/tag/挫折" target="_blank">
+    挫折
+   </span>
+   击倒
   </strong>
  </p>
  <center>
@@ -268,8 +342,8 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p>
-  其实，中国境内的牢狱还因为存在官方对良心犯恣意使用酷刑而受到国际社会关注、谴责。然而，实际上的状况，更令人发指。
+ <p dir="ltr">
+  任何的挫折都是为了使我们更聪明、更强大，因此，不要被任何挫折给击倒，要让挫折使我们成为一个更好的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -283,8 +357,10 @@
    </center>
   </div>
  </center>
- <p>
-  中国公民运动网在6月26日“支持酷刑受害者国际日”发布报导称，近年来北京当局针对良心犯的迫害已经有了一整套系统性的、针对性的酷刑手段，例如长时间的强迫失踪、秘密关押、禁止律师会见以剥夺当事人的司法救济权、刑讯逼供强迫当事人“自证其罪，甚至是株连当事人的家属以威逼相关人士噤声等等。在实施的过程中，比较普遍的惩罚为：剥夺睡眠、殴打、饿饭、不提供饮用水、戴死刑犯刑具、长时间审讯、关禁闭室等，除此之外，各看守所、监狱还充斥着五花八门的刑囚惩治术语。更令人害怕的是，多数良心犯在遭受酷刑期间，外界根本无从得知当事人的消息。先前当局针对被判重刑12年的“六四天网”创办人黄琦进行消息封锁时，为了要阻断外界的关注，不惜软禁黄琦那位身患绝症、87岁高龄的耄耋母亲。
+ <p dir="ltr">
+  <strong>
+   10、给自己一点时间思考
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -298,8 +374,8 @@
    </center>
   </div>
  </center>
- <p>
-  然而，北京当局自被发现对良心犯动用酷刑后，时至今日，仍有大批的良心犯正在狱中忍受着酷刑折磨或面临着酷刑逼迫的危险。目前监狱里仍囚禁着一大批坚守良知、追求正义的良心犯，例如：“王炳章、胡石根、陈西、伊力哈木、秦永敏、李铁、黄琦、王怡、刘飞跃、伊力哈木、吴淦、张海涛、高智晟、沈良庆、周维林、陈玫、蔡伟、程渊、刘永泽、吴葛剑雄、陈秋实、方斌、郭泉、陈建芳、朱承志、许志永、丁家喜”……等。
+ <p dir="ltr">
+  也许你认为没好好把握住机会很不应该，错误则是一种失败，如果你这样认为，不妨停下脚步好好思考一番，你一定可以从中学到一些经验，而那些你学到的，就是最宝贵的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -313,8 +389,8 @@
    </center>
   </div>
  </center>
- <p>
-  中国公民运动网在这一“支持酷刑受害者国际日”中，也强烈要求北京政府采纳三大项建议：
+ <p dir="ltr">
+  任何失败都是一种教训，只有从中学习，我们下次才不会再犯。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -328,8 +404,10 @@
    </center>
   </div>
  </center>
- <p>
-  一、立刻停止任何形式的酷刑，对于酷刑受害者给予国家赔偿。
+ <p dir="ltr">
+  <strong>
+   11、太过在意自己没有的
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -343,8 +421,8 @@
    </center>
   </div>
  </center>
- <p>
-  二、依法保障公民的基本人权，并释放一切因为思想、良心、信仰而遭受囚禁的良心人士。
+ <p dir="ltr">
+  人们总是太容易不满意自己、不满足现况，我们在乎自己不够好、不够漂亮，我们在乎别人拥有我们没有的东西，一旦我们陷入这种想法，就容易产生负面思考。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -358,8 +436,55 @@
    </center>
   </div>
  </center>
- <p>
-  三、追究实施酷刑者的法律责任，严禁酷刑在任何一名公民的身上重演。
+ <p dir="ltr">
+  如果你这么想，不妨想想，这世界上有很多人无法拥有你现在拥有的东西。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   12、常感到失落，找不到自我
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  也许你曾经陷入一种困惑，那就是不知道自己想做什么、喜欢做什么、能做什么。人们多少都曾经这样过，但这能够帮助我们找到自己真正想要的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  上述这些想法，常常阻碍着人们迈向成功，不是环境阻碍了我们，而是我们阻碍了自己，想成功，就先从告别这12条想法开始。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -391,7 +516,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -423,13 +548,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/944295.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/944295.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/944295.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/27/944295.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950260.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950260.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950260.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/950260.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/944295.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/950260.md' width='0px' height='0px'/>
