--- a/pages/p3/950619.md
+++ b/pages/p3/950619.md
@@ -1,4 +1,4 @@
-### 热贴：抖音姓党 挡都挡不住 不禁才怪(图)
+### 家境贫寒的华男毕业3年买房20套 怎么做到的？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/8-5/p2747322a493549798-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/5-13/p2689208a147167885-ss.jpg"/>
   <br>
-   TikTok（抖音）在美国遭到封禁。（Cindy Ord/Getty Images）
+   房产（示意图/Adobe stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,61 +21,52 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  【九評之二】評中國共產黨是怎樣起家的](http://141.164.51.119:10000/videos/news/../res/jiuping/index.html)
-
-#### [ 🔥  走出文化亡国第八集 - 中共通过这个几个“阴招”让国人不断“遗忘历史”  ](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
-
-#### [ 🔥  美国开始制裁林郑月娥等11名官员;美台建交概率急升](http://141.164.51.119:10000/videos/news/ztl02.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月9日讯】
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  (特朗普)总统已在8月6日签署行政令，要在45天后全面封禁TikTok（抖音）和微信。这两款软件的背景属性问题则引发网民高度关注。
+  【看中国2020年10月28日讯】
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
+    加拿大
+   </span>
+  </strong>
+  多伦多25岁的
+  <strong>
+   华人
+  </strong>
+  小哥，从多伦多大学毕业后进入RBC银行工作，年薪7万，工作3年买了20套
+  <strong>
+   房产
+  </strong>
+  ，怎么做到的？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据“人权观察”（HRW）2011年6月3日消息显示，中共政府雇佣超过4万名互联网审查员，阻止和删除对中共有批评的内容。除审查、过滤微信内容外，使用者的数据也都进入了中共的数据库。这款软件也被西方情报机构认定为世界上最不安全的软件。
- </p>
- <p>
-  而对于
-  <span href="https://www.secretchina.com/news/gb/tag/抖音" target="_blank">
-   抖音
+  据Toronto Life报导，
+  <span href="https://www.secretchina.com/news/gb/tag/华人" target="_blank">
+   华人
   </span>
-  的母公司“字节跳动”（ByteDance），其属性问题最近也被网友扒了个底朝天。
+  小哥Austin Yeh出生于1995年，在多伦多士嘉堡区长大，父母都是在印度长大的华人，1970年移民加拿大，家庭条件并不富裕。小哥的爸爸6年级就辍学了，在餐馆后厨找了一份工作，以补贴他的父母和四个兄弟姐妹，他初到加拿大时曾在咖啡店打工和送Pizza外卖。
  </p>
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/8-9/p2750103a12273421-ss.jpg"/>
-  <br>
-   （大陆网络截图）
-  </br>
+ <p>
+  小哥的妈妈比小哥的爸爸晚几年来加拿大，在工厂里打工。1980年，俩人经熟人介绍组成了家庭，生下了小哥和他的妹妹Angel，并在几年后以9万加元的价格，在士嘉堡买了一栋四房一卫的房子。
  </p>
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/8-9/p2750102a564860996-ss.jpg"/>
-  <br>
-   （大陆网络截图）
-  </br>
+ <p>
+  小哥回忆，小时候最开心的事就是一家人休假时结伴出游，但是财务状况对他的家庭来说一直是个问题，所以他们总是要提前考虑路途中哪个加油站价格最便宜，搜索各种优惠券。当时，小哥梦想着长大后成为一名医生或牙医，可观的收入让他可以拥有任何自己想要的东西而不必考虑价格。
  </p>
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/8-9/p2750101a812470745-ss.jpg"/>
-  <br>
-   （大陆网络截图）
-  </br>
+ <p>
+  因为父母的叮嘱，小哥深知教育是成功的关键，他非常努力学习，在多伦多大学（UTSC）读书期间，四年获得2.5万加元的奖学金，还曾到普华永道，德勤等顶尖公司实习。学习之余，小哥每年暑假都和他妈妈一起去DVD包装工厂做全职工人，赚取最低时薪。
+ </p>
+ <p>
+  2017年，小哥从多大毕业后，第一份工作就是在RBC银行做Commercial Banker（商业银行家），年薪7万加元，比他以往时候赚的都多。但是小哥并未满足。最终，他转入金融课程，因为他知道这将给他带来可观的收入。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,11 +81,41 @@
   </div>
  </center>
  <p>
-  同时，也有海外中文媒体从内部人士获得部分
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  2018年，他在朋友的推荐下阅读了一本书《富爸爸，穷爸爸》，彻底改变了他的命运。他从书中得知，创造被动收入才可以让你无需全职工作就可以赚钱。小哥将目光投向一些小镇。2018年秋天，他在温莎（Windsor）以13万加元的价格购买了第一套3房1卫的独立屋。交房后，小哥通过投入2.5万加元进行装修，使房子的估值在短时间升值了5万。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  当然，一切并不是那么顺风顺水，毫无经验的小哥在装修的过程中被装修团队拖延时间加价，起初说好的一个月变成三个月，1.25万装修费最终变成2.5万，他不得不向父母及女友借款1.3万才完成了装修。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  拥有第一套
+  <span href="https://www.secretchina.com/news/gb/tag/房产" target="_blank">
+   房产
   </span>
-  公司的党支委名单揭示出，抖音和“字节跳动”，跟中共党媒一样，都“姓党”（是中共党员）。这些名单透露出一个事实，无论中国社媒公司是属于私营或上市企业、还是国有控股公司，党已像癌细胞一样扩散，从管理层到普通员工层面上，渗透到公司肌体中，牢牢地控制着中国社交媒体上的舆论和声音。
+  后，存款归零还欠债1.3万的小哥如何继续购买19套房产？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -109,37 +130,7 @@
   </div>
  </center>
  <p>
-  字节跳动今年在某中国人才网站上发布的招聘广告显示，该公司招聘要求是“党员优先”，工作职责是对今日头条客户端中新闻媒体和自媒体内容进行审核。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  中共2015年实施的《国家安全法》，以及2017年实施的《国家情报法》、《网络安全法》等法规，不但明令禁止在互联网上传播任何不利于中共的内容，同时明确要求所有的组织和个人，当然也包括字节跳动、TikTok等互联网企业和员工，必须无条件配合中共搜集情报和审查资讯。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2018年4月，字节跳动旗下“内涵段子”遭中共关停。字节跳动创始人张一鸣发出公开道歉信，向中共承诺“加强党建”，对全体员工进行社会主义核心价值观、舆论导向等教育；并将内容审核团队从6000人扩大到1万人。
+  他的关键选择是，不急于卖房，而是将房产重新贷款（refinance）。通过银行贷款的钱小哥又买了一套房产。后来，他一直不断重复同样的事情：买房，装修，重新贷款，出租。有时，他还会与别人合作购买。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -158,7 +149,7 @@
   </ins>
  </center>
  <p>
-  据报导，字节跳动拥有以抖音、今日头条为代表的庞大的业务矩阵。不过罕为人知的是，字节跳动去年新增了一个功能独特的矩阵——“网警矩阵”。
+  通过这个方法，小哥在2年多的时间里购买了温莎18处房产和多伦多2处房产，价格从13万-65万加元不等，以月租1400-4000加元出租，并用房租支付贷款。目前这些房产的贷款总额约500万加元，小哥每月用房租还款后还能余下4000加元的收入。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,7 +164,11 @@
   </div>
  </center>
  <p>
-  党媒“光明网”2019年9月14日曾报导，“全国网警巡查执法抖音号矩阵入驻仪式”在京举行，全国省级、地市级公安机关170家网警单位宣布，将以开通专门工作账号的方式集体入驻抖音。公安部网络安全保卫局副局长张宏业表示，各地网警集体入驻，是要借助抖音的优势，“提升公安机关网络社会治理（维稳）能力”。
+  直到今年的
+  <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+   中共病毒
+  </span>
+  (又称新冠状病毒，COVID-19)大流行，情况开始有了变化。幸运的是小哥的租客们都还按时支付房租，无一欠租。不过，小哥从中学到了重要的一课，资产不断扩张的同时，面临的风险也更多，所以未来他将更加谨慎地评估自己所能承受的范围。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +183,7 @@
   </div>
  </center>
  <p>
-  虽然字节跳动及其创始人反复声称，TikTok（海外抖音）没有、也不会向外国政府（包括中共）提交用户信息。然而该公司的运营实践和陆媒公开报导，都证明，“不受外国政府影响”的说辞与事实不符。
+  虽然小哥现在每个月有固定的全职工作收入以及4000加元以上的被动收入，但是他仍然十分节俭，还与父母同住在士嘉堡的家中，用投资赚到的钱帮他赚更多的钱，早日实现财富自由，帮助57岁和64岁的母亲和父亲在未来2年内退休。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -220,7 +215,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -252,13 +247,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/942322.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/942322.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/942322.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/09/942322.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950619.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950619.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/950619.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/28/950619.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/942322.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/950619.md' width='0px' height='0px'/>
